--- a/yasam.html
+++ b/yasam.html
@@ -230,7 +230,7 @@
     }
 
     .content.active {
-      max-height: 1200px;
+      max-height: 2000px;
       opacity: 1;
       padding: 35px;
       margin-top: 25px;
@@ -405,7 +405,6 @@
     <div class="header-content">
       <h1>Günlük Yaşam Bilgisi</h1>
       <p class="subtitle">Modern yaşam becerilerini öğrenmenin en etkili yolu</p>
-
     </div>
   </header>
 
@@ -421,9 +420,10 @@
         <div class="expand-arrow">▼</div>
         <div id="topic1" class="content">
           <div class="video-container">
-            <div class="video-placeholder">
-              🎥 Video: Temizlik ve Hijyen Rehberi
-            </div>
+            <video controls>
+              <source src="video/temizlik.mp4" type="video/mp4" />
+              Tarayıcınız video etiketini desteklemiyor.
+            </video>
           </div>
           <div class="transcript">
             <strong>📝 Video İçeriği</strong>
@@ -472,9 +472,10 @@
         <div class="expand-arrow">▼</div>
         <div id="topic2" class="content">
           <div class="video-container">
-            <div class="video-placeholder">
-              🎥 Video: Trafik Güvenliği Rehberi
-            </div>
+            <video controls>
+              <source src="video/trafik.mp4" type="video/mp4" />
+              Tarayıcınız video etiketini desteklemiyor.
+            </video>
           </div>
           <div class="transcript">
             <strong>📝 Video İçeriği</strong>
@@ -529,9 +530,10 @@
         <div class="expand-arrow">▼</div>
         <div id="topic3" class="content">
           <div class="video-container">
-            <div class="video-placeholder">
-              🎥 Video: Temel Sağlık Rehberi
-            </div>
+            <video controls>
+              <source src="video/saglik.mp4" type="video/mp4" />
+              Tarayıcınız video etiketini desteklemiyor.
+            </video>
           </div>
           <div class="transcript">
             <strong>📝 Video İçeriği</strong>
@@ -553,7 +555,7 @@
               <strong>İlaçları nasıl kullanmalıyız?</strong><br />
               - İlaçlar sadece doktorun dediği şekilde kullanılmalıdır.<br />
               - Kendi başımıza ilaç içmemeliyiz.<br />
-              - Tarihi geçmiş ilaçları kullanmamalıyız.<br /><br />
+              - Tarihi geçmiş ilaçları kullanmamalıyiz.<br /><br />
 
               <strong>Temizlik sağlık için neden önemli?</strong><br />
               Temizlik, hastalıklardan korunmamıza yardımcı olur:<br />
@@ -591,9 +593,10 @@
         <div class="expand-arrow">▼</div>
         <div id="topic4" class="content">
           <div class="video-container">
-            <div class="video-placeholder">
-              🎥 Video: Sağlıklı Beslenme Rehberi
-            </div>
+            <video controls>
+              <source src="video/beslenme.mp4" type="video/mp4" />
+              Tarayıcınız video etiketini desteklemiyor.
+            </video>
           </div>
           <div class="transcript">
             <strong>📝 Video İçeriği</strong>
@@ -643,3 +646,183 @@
           <h2 class="topic-title">Basit İlk Yardım Bilgisi</h2>
           <div class="topic-icon pulse">🚑</div>
         </div>
+        <p class="topic-preview">Acil durumlar ve temel ilk yardım: Basit yaralanmalar, 112'yi arama ve güvenlik önlemleri.</p>
+        <div class="expand-arrow">▼</div>
+        <div id="topic5" class="content">
+          <div class="video-container">
+            <video controls>
+              <source src="video/ilkyardım.mp4" type="video/mp4" />
+              Tarayıcınız video etiketini desteklemiyor.
+            </video>
+          </div>
+          <div class="transcript">
+            <strong>📝 Video İçeriği</strong>
+            <p>
+              Merhaba!<br />
+              Bu derste <strong>basit ilk yardım bilgileri</strong> hakkında konuşacağız.<br />
+              Hazırsan başlayalım!<br /><br />
+
+              <strong>İlk yardım nedir?</strong><br />
+              İlk yardım, bir yaralanma veya hastalık durumunda doktor gelene kadar yapılan ilk müdahaledir.<br /><br />
+
+              <strong>112'yi ne zaman aramalıyız?</strong><br />
+              - Ciddi bir kaza olduğunda<br />
+              - Birisi bayıldığında<br />
+              - Yüksek ateş ve bilinç kaybı varsa<br />
+              - Şiddetli kanama olduğunda<br />
+              - Nefes almakta zorluk çekildiğinde<br /><br />
+
+              <strong>Basit yaralanmalarda ne yapmalıyız?</strong><br />
+              - Küçük kesikler için temiz bezle bastır.<br />
+              - Kanama duruncaya kadar baskı uygula.<br />
+              - Yarayı temiz su ile yıka.<br />
+              - Yara bandı veya gazlı bez ile kapat.<br /><br />
+
+              <strong>Yanık durumunda:</strong><br />
+              - Soğuk su ile 10-15 dakika tut.<br />
+              - Buz kullanma!<br />
+              - Yanık çok büyükse doktora git.<br /><br />
+
+              <strong>Burun kanaması:</strong><br />
+              - Başı öne eğ.<br />
+              - Burnun yumuşak kısmına 10 dakika bastır.<br />
+              - Ağızdan nefes al.<br /><br />
+
+              <strong>Güvenlik önlemleri:</strong><br />
+              - Evde ilk yardım çantası bulundur.<br />
+              - Acil durum numaralarını bil (112, 110, 155).<br />
+              - Panik yapma, sakin ol.<br /><br />
+
+              <strong>Hatırla:</strong><br />
+              - Her zaman önce güvenliğini sağla.<br />
+              - Emin olmadığın durumlarda uzman yardımı iste.<br />
+              - İlk yardım bilgisi hayat kurtarabilir.<br /><br />
+
+              Bu bilgiler temel seviyededir. Daha ayrıntılı bilgi için ilk yardım kurslarına katılabilirsin.<br />
+              Sağlıklı kalın, bir sonraki derste görüşmek üzere!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2025 Egehan Bayram | <a href="index.html">Ana Sayfa</a></p>
+  </footer>
+
+  <script>
+    // Parçacık animasyonu oluştur
+    function createParticles() {
+      const particlesContainer = document.getElementById('particles');
+      const particleCount = 15;
+
+      for (let i = 0; i < particleCount; i++) {
+        const particle = document.createElement('div');
+        particle.className = 'particle';
+        particle.style.left = Math.random() * 100 + '%';
+        particle.style.top = Math.random() * 100 + '%';
+        particle.style.animationDelay = Math.random() * 8 + 's';
+        particle.style.animationDuration = (8 + Math.random() * 4) + 's';
+        particlesContainer.appendChild(particle);
+      }
+    }
+
+    // İçerik açma/kapama fonksiyonu
+    function toggleContent(contentId, topicElement) {
+      const content = document.getElementById(contentId);
+      const allTopics = document.querySelectorAll('.topic');
+      const allContents = document.querySelectorAll('.content');
+
+      // Diğer açık topic'leri kapat
+      allTopics.forEach(topic => {
+        if (topic !== topicElement) {
+          topic.classList.remove('active');
+        }
+      });
+      allContents.forEach(c => {
+        if (c !== content) {
+          c.classList.remove('active');
+        }
+      });
+
+      // Mevcut topic'i aç/kapat
+      topicElement.classList.toggle('active');
+      content.classList.toggle('active');
+
+      // Açılan içeriğe yumuşak kaydırma
+      if (content.classList.contains('active')) {
+        setTimeout(() => {
+          content.scrollIntoView({ 
+            behavior: 'smooth', 
+            block: 'center' 
+          });
+        }, 300);
+      }
+    }
+
+    // Sayfa yüklendiğinde çalışacak fonksiyonlar
+    document.addEventListener('DOMContentLoaded', function() {
+      createParticles();
+
+      // Intersection Observer ile animasyon
+      const observerOptions = {
+        threshold: 0.1,
+        rootMargin: '0px 0px -50px 0px'
+      };
+
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.style.opacity = '1';
+            entry.target.style.transform = 'translateY(0)';
+          }
+        });
+      }, observerOptions);
+
+      // Topic'leri gözlemle
+      const topics = document.querySelectorAll('.topic');
+      topics.forEach((topic, index) => {
+        topic.style.opacity = '0';
+        topic.style.transform = 'translateY(50px)';
+        topic.style.transition = 'opacity 0.8s ease, transform 0.8s ease';
+        topic.style.transitionDelay = `${index * 0.1}s`;
+        observer.observe(topic);
+      });
+
+      // Parallax efekti
+      window.addEventListener('scroll', () => {
+        const scrolled = window.pageYOffset;
+        const parallax = document.getElementById('particles');
+        const speed = scrolled * 0.3;
+        parallax.style.transform = `translateY(${speed}px)`;
+      });
+
+      // Hover efektleri
+      topics.forEach(topic => {
+        topic.addEventListener('mouseenter', () => {
+          if (!topic.classList.contains('active')) {
+            topic.style.transform = 'translateY(-15px) scale(1.03)';
+          }
+        });
+        
+        topic.addEventListener('mouseleave', () => {
+          if (!topic.classList.contains('active')) {
+            topic.style.transform = 'translateY(0) scale(1)';
+          }
+        });
+      });
+    });
+
+    // Video otomatik oynatma engelleme (kullanıcı deneyimi için)
+    document.addEventListener('DOMContentLoaded', function() {
+      const videos = document.querySelectorAll('video');
+      videos.forEach(video => {
+        video.addEventListener('loadstart', function() {
+          this.volume = 0.7; // Ses seviyesini ayarla
+        });
+      });
+    });
+  </script>
+</body>
+</html>
